[App] enh: migrate to jvm 24